--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,20 @@
 buildscript {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath "com.android.tools.build:gradle:4.2.2"
     }
 }
 
+
 allprojects {
+    repositories {
+            google()
+            mavenCentral()
+            jcenter() // Warning: this repository is going to shut down soon
+        }
     group = 'com.assignment.gradledependencies'
     version = '1.0'
 }
