--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        // jcenter() 
+        // Warning: this repository is going to shut down soon
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.2'
