--- a/GradleDependencies/build.gradle
+++ b/GradleDependencies/build.gradle
@@ -26,6 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+  
+    group = 'com.assignment.gradledependencies-new'
+
 }
 
 dependencies {
