--- a/GradleDependencies/build.gradle
+++ b/GradleDependencies/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
 }
 
+group = 'xyz-dependencies'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -26,7 +27,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    name = 'xyz-dependencies'
+    
 
 }
 
