--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,10 @@
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.2'
+    }
+}
+
 allprojects {
     group = 'com.assignment.gradledependencies'
-    version = '1.8'
+    version = '2.2'
 }
